--- a/wifi/firmware/WCNSS_qcom_cfg.ini
+++ b/wifi/firmware/WCNSS_qcom_cfg.ini
@@ -532,6 +532,9 @@ gEnablePowerSaveOffload=2
 # Disable rx wakelock
 rx_wakelock_timeout=0
 
+# Disable RTT as recommended by QC
+gEnableRTTSupport=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
