--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -398,3 +398,6 @@ service vendor.contexthub-hal-1-0 /vendor/bin/hw/android.hardware.contexthub@1.0
 
 on property:dev.bootcomplete=1
     swapon_all /vendor/etc/fstab.qcom
+
+on property:dev.bootcomplete=1
+    restart ril-daemon
