rolex: set VFS chache preasure
Signed-off-by: fadlyas07 <fadlyardhians@gmail.com>
Change-Id: I1ca10444dce122f83c6c60ef5fa0b0ecae62af37

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -43,6 +43,9 @@ on init
 
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
+    # VFS chache preasure
+    write /proc/sys/vm/vfs_cache_pressure 100
+
 on post-fs
     chmod 0755 /sys/kernel/debug/tracing
 
